--- a/EstagiA/app/src/main/res/layout/activity_main.xml
+++ b/EstagiA/app/src/main/res/layout/activity_main.xml
@@ -55,11 +55,17 @@
         android:id="@+id/btnLogin"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_shape"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="10dp"
         android:text="@string/login_button" />
     <Button
         android:id="@+id/btnCadastrar"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_shape"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="7dp"
         android:text="@string/signup_button" />
 
 </LinearLayout>
