--- a/EstagiA/app/src/main/res/layout/activity_dashboard.xml
+++ b/EstagiA/app/src/main/res/layout/activity_dashboard.xml
@@ -243,12 +243,27 @@
                         android:layout_height="65dp"
                         android:src="@drawable/logo_spotify" />
                     <TextView
-                        android:id="@+id/txtSpotifyInfo"
+                        android:id="@+id/txtSpotifyNome"
                         android:layout_width="130dp"
-                        android:layout_height="70dp"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_height="30dp"
                         android:gravity="center"
-                        android:text="Palestra Spotify no auditório 1 blablablla"/>
+                        android:textSize="20sp"
+                        android:text="Spotify"/>
+                    <TextView
+                        android:id="@+id/txtSpotifyLocal"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="13sp"
+                        android:text="Auditório DC"/>
+                    <TextView
+                        android:id="@+id/txtSpotifyData"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="13sp"
+                        android:text="15/12/2017"/>
                 </LinearLayout>
 
                 <Space
@@ -267,12 +282,27 @@
                         android:layout_height="65dp"
                         android:src="@drawable/logo_itau"/>
                     <TextView
-                        android:id="@+id/txtItauInfo"
+                        android:id="@+id/txtItauNome"
                         android:layout_width="130dp"
-                        android:layout_height="70dp"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_height="30dp"
                         android:gravity="center"
-                        android:text="Palestra Itaú no auditório 1 blablablla"/>
+                        android:textSize="20sp"
+                        android:text="Itaú"/>
+                    <TextView
+                        android:id="@+id/txtItauLocal"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="13sp"
+                        android:text="Bento Prado Jr"/>
+                    <TextView
+                        android:id="@+id/txtItauData"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="13sp"
+                        android:text="14/12/2017"/>
                 </LinearLayout>
                 <Space
                     android:layout_width="wrap_content"
@@ -290,24 +320,39 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
                 <LinearLayout
-                    android:id="@+id/raccoon2"
+                    android:id="@+id/monitora"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:orientation="vertical"
                     android:gravity="center">
 
                     <ImageView
-                        android:id="@+id/imgRaccoon2"
+                        android:id="@+id/imgMonitora"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
-                        android:src="@drawable/logo_raccoon" />
+                        android:src="@drawable/logo_monitora" />
                     <TextView
-                        android:id="@+id/txtRaccoonInfo"
+                        android:id="@+id/txtMonitoraNome"
                         android:layout_width="130dp"
-                        android:layout_height="70dp"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_height="30dp"
                         android:gravity="center"
-                        android:text="Palestra Raccoon no auditório 1 blablablla"/>
+                        android:textSize="20sp"
+                        android:text="Monitora"/>
+                    <TextView
+                        android:id="@+id/txtMonitoraLocal"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="13sp"
+                        android:text="Lab II DC"/>
+                    <TextView
+                        android:id="@+id/txtMonitoraData"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="13sp"
+                        android:text="17/12/2017"/>
                 </LinearLayout>
 
                 <Space
@@ -315,23 +360,38 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
                 <LinearLayout
-                    android:id="@+id/monitora"
+                    android:id="@+id/ibm"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:orientation="vertical"
                     android:gravity="center">
                     <ImageView
-                        android:id="@+id/imgMonitora"
+                        android:id="@+id/imgIbm"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
-                        android:src="@drawable/logo_monitora"/>
+                        android:src="@drawable/logo_ibm"/>
                     <TextView
-                        android:id="@+id/txtMonitoraInfo"
+                        android:id="@+id/txtIbmNome"
                         android:layout_width="130dp"
-                        android:layout_height="70dp"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_height="30dp"
                         android:gravity="center"
-                        android:text="Palestra Monitora no auditório 1 blablablla"/>
+                        android:textSize="20sp"
+                        android:text="IBM"/>
+                    <TextView
+                        android:id="@+id/txtIbmLocal"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="13sp"
+                        android:text="Auditório DC"/>
+                    <TextView
+                        android:id="@+id/txtIbmData"
+                        android:layout_width="130dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="13sp"
+                        android:text="16/12/2017"/>
                 </LinearLayout>
                 <Space
                     android:layout_width="wrap_content"
