--- a/EstagiA/app/src/main/res/layout/activity_recover_password.xml
+++ b/EstagiA/app/src/main/res/layout/activity_recover_password.xml
@@ -30,7 +30,9 @@
     android:id="@+id/btnRecoverPassword"
     android:layout_width="250dp"
     android:layout_height="wrap_content"
+    android:background="@drawable/button_shape"
+    android:textColor="#FFFFFF"
     android:text="@string/recover_password_button"
-    android:layout_marginTop="18dp"/>
+    android:layout_marginTop="20dp"/>
 
 </LinearLayout>
